pals_with_bb/testcode/compile.txt
cc -O2 -Wall -g -Wno-format -I. -I.. -DPALS_DEBUG   -c -o multitest.o multitest.c
multitest.c:83:12: error: ‘brk’ redeclared as different kind of symbol
 int acc=0, brk=0, rot=90;
            ^
In file included from multitest.c:12:0:
/usr/include/unistd.h:1037:12: note: previous declaration of ‘brk’ was here
 extern int brk (void *__addr) __THROW __wur;
            ^
multitest.c: In function ‘tasklet_server’:
multitest.c:160:49: warning: pointer targets in passing argument 3 of ‘accept’ differ in signedness [-Wpointer-sign]
   client_sockfd = accept(server_sockfd, (struct sockaddr *)&clientaddr, &client_len);
                                                 ^
In file included from multitest.c:8:0:
/usr/include/arm-linux-gnueabihf/sys/socket.h:243:12: note: expected ‘socklen_t * __restrict__’ but argument is of type ‘int *’
 extern int accept (int __fd, __SOCKADDR_ARG __addr,
            ^
multitest.c:168:3: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
   if(buf[0]='a' && buf[4]=='b' && buf[8]=='r'){
   ^
multitest.c: In function ‘tasklet_rot’:
multitest.c:326:27: error: invalid type argument of unary ‘*’ (have ‘int’)
      lv = lv - (90-rot) - *speed;
                           ^
multitest.c:330:15: error: invalid type argument of unary ‘*’ (have ‘int’)
     }else if( *lv < 1510+rot ){
               ^
multitest.c:331:27: error: invalid type argument of unary ‘*’ (have ‘int’)
      lv = lv + (90-rot) + *speed;
                           ^
multitest.c:344:27: error: invalid type argument of unary ‘*’ (have ‘int’)
      rv = rv - (rot-90) - *speed;
                           ^
multitest.c:349:27: error: invalid type argument of unary ‘*’ (have ‘int’)
      rv = rv + (rot-90) + *speed;
                           ^
multitest.c: In function ‘tasklet_ard’:
multitest.c:420:7: warning: ignoring return value of ‘write’, declared with attribute warn_unused_result [-Wunused-result]
  write(w_fd, &lv, sizeof(lv));
       ^
multitest.c:421:7: warning: ignoring return value of ‘write’, declared with attribute warn_unused_result [-Wunused-result]
  write(w_fd, &rv, sizeof(rv));
       ^
make: *** [multitest.o] Error 1
